# GraphicsFileLoader

./: .gitmodules  CMakeLists.txt  DummyModifier.cpp  DummyModifier.h  DummySceneLoader.cpp  DummySceneLoader.h  GraphicsFileLoader.dsp  GraphicsFileLoader.dsw  GraphicsFileLoader.ncb  GraphicsFileLoader.opt  GraphicsFileLoader.plg  HoofdScherm.cpp  HoofdScherm.h  README.md  Scherm.cpp  Scherm.h  SelectionGroups.cpp  SelectionGroups.h  Selector.cpp  Selector.h  TextureManager.cpp  TextureManager.h
Control/: ControlCameraTool.cpp  ControlCameraTool.h  ControlSelectionTool.cpp  ControlSelectionTool.h  ControlToolArguments.cpp  ControlToolArguments.h
Graphics/: GraphicsCamera.cpp  GraphicsCamera.h  GraphicsCube.cpp  GraphicsCube.h  GraphicsEngine.cpp  GraphicsEngine.h  GraphicsObjects.cpp  GraphicsObjects.h  GraphicsRectangle.cpp  GraphicsRectangle.h  GraphicsView.cpp  GraphicsView.h
Interface/: ICamera.h  IGroup.h  IMaterial.h  IModifier.h  IPoint.h  IScene.h  ISceneLoader.h  ISelection.h  ITexCoord.h  ITool.h  IToolArguments.h  ITriangle.h  IVertex.h  flag.h
structure/: StructureGroup.cpp  StructureGroup.h  StructureMaterial.cpp  StructureMaterial.h  StructureScene.cpp  StructureScene.h  StructureSceneManager.cpp  StructureSceneManager.h  StructureTexCoord.cpp  StructureTexCoord.h  StructureTriangle.cpp  StructureTriangle.h  StructureVertex.cpp  StructureVertex.h
